[gd_scene load_steps=3 format=3 uid="uid://13n1b2mwuvbm"]

[ext_resource type="Script" uid="uid://dm6ijkw711vax" path="res://Scripts/UI/ui.gd" id="1_0l125"]
[ext_resource type="FontFile" uid="uid://d0r54wwk2faup" path="res://Graphics & Sounds/Fonts/novem___.ttf" id="1_ofikb"]

[node name="UI" type="CanvasLayer" groups=["GroupUI"]]
script = ExtResource("1_0l125")

[node name="ScoreMarginContainer" type="MarginContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -69.0
offset_right = 69.0
offset_bottom = 46.0
grow_horizontal = 2
theme_override_constants/margin_top = 20

[node name="ScoreLabelTop" type="Label" parent="ScoreMarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85098, 0.984314, 1, 1)
theme_override_fonts/font = ExtResource("1_ofikb")
theme_override_font_sizes/font_size = 45
text = "SCORE: 0"
horizontal_alignment = 1

[node name="ShipLifeMarginContainer" type="MarginContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 122.0
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="ShipLifeMarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
